--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:text="SOCIETY MEMBER"
         android:textSize="20dp"
         android:id="@+id/bsoc"
+        android:padding="4dp"
         android:background="@android:color/holo_blue_dark"/>
 
 </android.widget.RelativeLayout>
