--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,28 +5,29 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".MainActivity">
 
     <Button
-        android:layout_marginVertical="300dp"
-        android:layout_centerVertical="false"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="USER"
-        android:textSize="20dp"
         android:id="@+id/buser"
-        android:background="@android:color/holo_blue_dark"
-        />
-    <Button
-        android:layout_marginVertical="370dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SOCIETY MEMBER"
-        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="false"
+        android:layout_marginVertical="300dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="USER"
+        android:textSize="20dp" />
+
+    <Button
         android:id="@+id/bsoc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="370dp"
+        android:background="@android:color/holo_blue_dark"
         android:padding="4dp"
-        android:background="@android:color/holo_blue_dark"/>
+        android:text="SOCIETY MEMBER"
+        android:textSize="20dp" />
 
 </android.widget.RelativeLayout>
