--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,13 @@
     tools:context=".MainActivity">
 
     <android.support.v7.widget.CardView
-        android:visibility="invisible"
-        android:clickable="false"
         android:id="@+id/but2"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="150dp"
+        android:visibility="visible"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="25dp"
         app:cardElevation="15dp">
@@ -34,13 +33,15 @@
     </android.support.v7.widget.CardView>
 
     <EditText
+        android:visibility="invisible"
+        android:clickable="false"
         android:id="@+id/pass"
         android:layout_width="300dp"
         android:layout_height="52dp"
         android:layout_alignTop="@+id/but2"
         android:layout_centerHorizontal="true"
         android:hint="Enter Password !"
-        android:drawableLeft="@drawable/lockIcon"
+        android:drawableLeft="@drawable/lock_icon"
         android:textSize="24sp"/>
     <ImageView
         android:id="@+id/imageView"
@@ -53,15 +54,14 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/but1"
-        android:visibility="invisible"
-        android:clickable="false"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="231dp"
+
         android:backgroundTintMode="src_in"
+        android:visibility="visible"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="25dp"
         app:cardElevation="15dp">
@@ -78,12 +78,38 @@
 
     <EditText
         android:id="@+id/name2"
+        android:visibility="invisible"
+        android:clickable="false"
         android:layout_width="300dp"
         android:layout_height="52dp"
         android:layout_alignTop="@+id/but1"
         android:layout_centerHorizontal="true"
         android:hint="Enter Username !!"
-        android:drawableLeft="@drawable/userIcon"
+        android:drawableLeft="@drawable/user_icon"
         android:textSize="24sp" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/but3"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="invisible"
+        android:clickable="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="81dp"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="25dp" >
+
+        <TextView
+            android:layout_marginVertical="10dp"
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
 
 </android.widget.RelativeLayout>
