--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,6 +8,7 @@
     tools:context=".Main2Activity">
 
     <LinearLayout
+        android:id="@+id/l1"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/colorPrimary">
@@ -22,6 +23,35 @@
             android:textColor="@android:color/black"
             android:textSize="30sp" />
     </LinearLayout>
+
+        <LinearLayout
+        android:orientation="vertical"
+            android:layout_below="@id/l1"
+            android:layout_margin="5dp"
+
+        android:layout_width="120dp"
+        android:layout_height="190dp">
+
+        <ImageView
+            android:id="@+id/book_img_id"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:scaleType="centerCrop"
+            android:background="#2d2d2d" />
+
+        <TextView
+            android:id="@+id/book_title_id"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Poster Title"
+            android:textSize="13sp"
+            android:gravity="center"
+            android:textColor="#2d2d2d"
+
+            />
+
+
+         </LinearLayout>
     <Button
         android:id="@+id/dddown"
         android:layout_width="50dp"
