--- a/app/src/main/res/layout/list_popup.xml
+++ b/app/src/main/res/layout/list_popup.xml
@@ -12,6 +12,7 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:text="Help"
+        android:onClick="hel"
         android:textColor="#FFFFFF"
         android:textSize="18dp" />
     <View
