--- a/app/src/main/res/layout/list_popup.xml
+++ b/app/src/main/res/layout/list_popup.xml
@@ -13,7 +13,8 @@
         android:gravity="center"
         android:text="Help"
         android:textColor="#FFFFFF"
-        android:textSize="18dp" />
+        android:textSize="18dp"
+        android:onClick="hel"/>
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
