--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -52,7 +52,7 @@
                 android:weightSum="8">
 
                 <GridLayout
-                    android:id="@+id/grid"
+                    android:id="@+id/mainGrid"
                     android:layout_width="match_parent"
                     android:layout_height="1100dp"
                     android:layout_weight="16"
