--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Society_Eight"
+    tools:context=".Admin"
     android:background="@drawable/buttongradient">
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,13 +19,13 @@
 
             <TextView
                 android:id="@+id/t1"
-                android:layout_width="180dp"
+                android:layout_width="210dp"
                 android:layout_height="40dp"
                 android:drawableStart="@drawable/ic_home_black_24dp"
-                android:text="FAPS"
+                android:text="Welcome Admin"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/dddown"
@@ -40,12 +40,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="100sp"
-            android:src="@drawable/s8"/>
+            android:src="@drawable/s3"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:gravity="center"
-            android:text="FAPS"
+            android:text="T.F.F."
             android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="25sp"/>
@@ -53,29 +53,18 @@
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:gravity="center"
-            android:text="Fine Arts and Photography Society"
+            android:text="Thapar Food Festival"
             android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="20sp"/>
-        <TextView
+
+        <Button
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="225sp"
-            android:gravity="left"
-            android:layout_marginTop="15sp"
-            android:textAlignment="center"
-            android:text="FAPS is always on the forefront to catch the 'Vincis' and 'Hussains'. Under the leadership of Dr. Ravi Kiran (President) and Dr. Shivani Goyal (Vice President), FAPS is grooming the engineering and management graduates of Thapar University to converse through the medium of art.
-FAPS is a very vibrant society and has a tradition of mentoring the youngsters through workshops on Sketching, Painting, Photography, Calligraphy and Photoshop. Active enthusiastic participation of students makes these events quite attractive, mixing teaching with learning.
-"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            android:textSize="15sp" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="75sp"
-            android:gravity="left"
-            android:layout_marginTop="15sp"
-            android:text="Contact: +91-80541 11222\nMessenger: @ThaparFAPS\nEmail: entriesfaps@gmail.com"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            android:textSize="15sp" />
+            android:layout_height="90dp"
+            android:background="@drawable/backblue"
+            android:text="Add New Poster" />
+
     </LinearLayout>
 
 </RelativeLayout>
