--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -58,12 +58,23 @@
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="20sp"/>
 
-        <Button
-            android:layout_marginTop="50dp"
-            android:layout_width="match_parent"
+
+        <android.support.v7.widget.CardView
+            android:layout_width="300dp"
             android:layout_height="90dp"
-            android:background="@drawable/backblue"
-            android:text="Add New Poster" />
+            android:layout_gravity="center"
+            android:layout_marginTop="80dp"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="ADD NEW POSTER"
+                android:textSize="22sp" />
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
