--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,6 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="vertical">
 
         <LinearLayout
@@ -31,11 +33,11 @@
 
             <Button
                 android:id="@+id/dddown"
-                android:background="@android:color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="120dp"
-                android:drawableRight="@drawable/dot"/>
+                android:background="@android:color/transparent"
+                android:drawableRight="@drawable/dot" />
 
         </LinearLayout>
 
